Modified and added comments

--- a/linear regression/Linear regression.ipynb
+++ b/linear regression/Linear regression.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem Statement: An Ecommerce company wants to focus either on mobile App or Website. Please analyze their customers dataset and help the company to take correct decision."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
